@@ -52,7 +52,7 @@ class tx_community_controller_groupprofile_GroupInformationWidget extends tx_com
 		$this->label    = $this->localizationManager->getLL('label_GroupInformationWidget');
 		$this->cssClass = '';
 
-		$this->dragable  = true;
+		$this->draggable = true;
 		$this->removable = true;
 		$this->position  = 2;
 	}
