@@ -46,7 +46,7 @@ class tx_community_controller_userprofile_ImageWidget extends tx_community_contr
 		$this->localizationManager = tx_community_LocalizationManager::getInstance('EXT:community/lang/locallang_userprofile_imagewidget.xml', $GLOBALS['TSFE']->tmpl->setup['plugin.']['tx_community.']);
 
 		$this->name = 'image';
-		$this->dragable = true;
+		$this->draggable = true;
 		$this->removable = true;
 
 		$this->label = $this->localizationManager->getLL('label_ImageWidget');
