@@ -1,3 +1,7 @@
+2008-10-02 Frank Naegler  <typo3@naegler.net>
+
+	* change the attribute name from dragable to draggable on all widgets
+
 2008-10-01 Frank Naegler  <typo3@naegler.net>
 
 	* added localizations to some widgets
